--- a/angular.json
+++ b/angular.json
@@ -15,6 +15,7 @@
           "options": {
             "outputPath": "dist/demo",
             "index": "src/index.html",
+            "aot": true,
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
